[metadata]
name = gimera
version = 0.7.105
description = Handling git submodules and patches per yml
url = https://github.com/marcwimmer/gimera
author_email = marc@zebroo.de
author = Marc-Christian Wimmer
license = MIT
description_file = README.md

[options]
python_requires = >=3.6.0
install_requires =
    click==8.1.3
    inquirer==3.4.0
    pyyaml
    pytest
    pudb
    urwid==2.6.16

[options.entry_points]
console_scripts =
    gimera = gimera.gimera:cli
