[metadata]
name = gimera
version = 0.8.5
description = Handling git submodules and patches per yml
url = https://github.com/marcwimmer/gimera
author_email = marc@zebroo.de
author = Marc-Christian Wimmer
license = MIT
description_file = README.md

[options]
python_requires = >=3.6.0
packages = find:
install_requires =
    click==8.1.3
    inquirer==3.4.0
    pyyaml
    pytest
    pudb
    urwid==2.6.16

[options.packages.find]
include = gimera*

[options.entry_points]
console_scripts =
    gimera = gimera.gimera:cli
